--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -2,8 +2,9 @@ name: Update README
 
 on:
   schedule:
-    - cron: "*/60 * * * *"
+    - cron: '*/60 * * * *'
   workflow_dispatch:
+  push:
 
 jobs:
   build:
@@ -15,3 +16,6 @@ jobs:
       - uses: jamesgeorge007/github-activity-readme@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          COMMIT_MSG: 'Specify a custom commit message'
+          MAX_LINES: 10
